# libzaudio

./: .atomignore  .gitignore  .travis.yml  Makefile  Makefile.am  Makefile.in  README.md  TODO.txt  api_template.hpp  autogen.sh  config.status  configure  configure.ac  libtool
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3  traces.4
doc/: Doxyfile
examples/: Makefile  Makefile.am  Makefile.in  callback_swap  callback_swap.cpp  device_probing  device_probing.cpp  lambda_sine.cpp  lambda_sine_example  playthrough  playthrough.cpp  sine.cpp  sine_example
examples/.deps/: device_probing.Po  lambda_sine.Po  playthrough.Po  sine.Po
include/: api_template.hpp  audio_process.hpp  audio_stream.hpp  buffer_group.hpp  buffer_view.hpp  config.hpp  constants.hpp  device_info.hpp  error_utility.hpp  pa_stream_api.hpp  sample_utility.hpp  stream_api.hpp  stream_callback.hpp  stream_context.hpp  stream_params.hpp  time_utility.hpp  zaudio.hpp  zaudio_defaults.hpp
src/: Makefile  Makefile.am  Makefile.in  libzaudio.cpp  libzaudio.la  libzaudio.lo
src/.deps/: libzaudio.Plo
src/.libs/: libzaudio.la  libzaudio.lai  libzaudio.so.0.0.1
winbuild/VisualStudio2015/: VisualStudio2015.sln  VisualStudio2015.vcxproj  VisualStudio2015.vcxproj.filters
